--- a/app/views/student_application_form/_fourth_step.erb
+++ b/app/views/student_application_form/_fourth_step.erb
@@ -18,6 +18,7 @@
 	     <%= f.select :language_instruction, languages_list, {}, {disabled: review} %>
 	  </div>
 	</div>
+	<div style="width:100%"></div>
 	<br/>
 	<br/>
 	<h2 class="block">Other languages</h2>
@@ -31,7 +32,7 @@
 		<% sap.languages.each_with_index do |language,index|%>
 		<div class="lang">
 			<div class="field">
-				<div class="flex-container">
+				<div class="flex-container first-fc">
 					<label for="name">Language</label>
 					<select  name="student_application_form[languages][][name]" class="language-input" <%=review ? "disabled" : ""%>  >
 						<% selected_lang = language.name.to_s || "English" %>
