--- a/app/assets/stylesheets/dashboard/dashboard.sass
+++ b/app/assets/stylesheets/dashboard/dashboard.sass
@@ -124,6 +124,8 @@
 			border-top: 1px solid $etsit_blue
 			padding: 15px
 			min-height: 40px
+			.ni_selection
+				padding-left: 10px
 			.dashboard-section
 				font-size: 18px
 				font-weight: bold
