--- a/app/views/student_application_form/_third_step.erb
+++ b/app/views/student_application_form/_third_step.erb
@@ -5,15 +5,15 @@
 <!--<p class="intro-paragraph">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>-->
 <div class="edit_student_application_flex purpose_stay" style="display:block">
 
-  <%= f.check_box :purpose_of_stay, autofocus: true, autocomplete: "purpose_of_stay", disabled: review %>
+  <%= f.check_box :purpose_of_stay, {multiple: true}, "Undergraduate courses", nil%>
   <%= f.label "graduate_courses", "Undergraduate courses" %><br/>
-  <%= f.check_box :purpose_of_stay, autofocus: true, autocomplete: "purpose_of_stay", disabled: review %>
+  <%= f.check_box :purpose_of_stay, {multiple: true},"Master courses", nil %>
   <%= f.label "graduate_courses", "Master courses" %><br/>
-  <%= f.check_box :purpose_of_stay, autofocus: true, autocomplete: "purpose_of_stay", disabled: review %>
+  <%= f.check_box :purpose_of_stay, {multiple: true}, "Bachelor/Master thesis", nil %>
   <%= f.label "graduate_courses", "Bachelor/Master thesis" %> <span class="red">(*)</span><br/>
-  <%= f.check_box :purpose_of_stay, autofocus: true, autocomplete: "purpose_of_stay", disabled: review %>
+  <%= f.check_box :purpose_of_stay, {multiple: true}, "Research Project", nil%>
   <%= f.label "graduate_courses", "Research Project" %><br/>
-  <%= f.check_box :purpose_of_stay, autofocus: true, autocomplete: "purpose_of_stay", disabled: review %>
+  <%= f.check_box :purpose_of_stay, {multiple: true}, "Research Project", nil%>
   <%= f.label "graduate_courses", "Other." %>  &nbsp;Please specify:
   <%= f.text_field :other_purpose, autofocus: true, autocomplete: "other_purpose", disabled: review %>
   <br/><br/>
